Move Unraid blog post to posts.

--- a/posts/2019-08-13-unraid.md
+++ b/posts/2019-08-13-unraid.md
@@ -1,4 +1,6 @@
-# Unraid
+---
+title: A "four players, 1 PC" build with Unraid
+---
 
 I've recently completed a build of a four-GPU Unraid box designed for quick, zero-setup LAN parties where each GPU was given to a Windows 10 VM along with some USB peripherals, which meant that four people could play on a single machine.
 Essentially, [Linus Tech Tips' "7 gamers, 1 PC"](https://www.youtube.com/watch?v=LXOaCkbt4lI) project reduced in cost and scope (and with increased stability).
