Fix a TODO and some Markdown formatting errors.

--- a/posts/2019-08-13-unraid.md
+++ b/posts/2019-08-13-unraid.md
@@ -33,7 +33,7 @@ So, the first hardware revision was this:
 | GPU 2       | Asus STRIX-RX480-O8G-GAMING                                 |
 | GPU 3       | Sapphire Pulse Radeon RX 580 8GD5                           |
 | GPU 4       | Sapphire Pulse Radeon RX 580 8GD5                           |
-| Storage     | todo                                                        |
+| Storage     | OCZ Saber 1000 240 GB                                       |
 | Storage     | Samsung 850 EVO 250 GB x4                                   |
 | Storage     | Sedna – Mounting Adapter for 2.5in HDD/SSD to Hard Disk Bay |
 | Fans        | Scythe Slip Stream Sl Case Fan 2,000 rpm x2                 |
@@ -46,7 +46,7 @@ In the end, I went for the board Linus used in his video.
 It was also one of the few cases that could handle the E-ATX format of the Z10PE-D8 WS.
 This particular case also has two fan slots at the top blowing directly on the GPU slots.
 
-**PSU:** *Be Quiet!** has always been a favourite of mine for PSUs and fans.
+**PSU:** *Be Quiet!* has always been a favourite of mine for PSUs and fans.
 They're high quality and not too expensive and very quiet indeed.
 
 **CPU:** There's no particular reason I got this CPU other than that it had sufficient cores to distribute among the VMs, and that the OEM version was cheap on eBay at the time.
@@ -54,7 +54,7 @@ They're high quality and not too expensive and very quiet indeed.
 **Cooler:** Noctua is also a high-quality brand that makes quiet coolers.
 This one could handle the high TDP of the CPU *and* fit in the case (but just barely).
 
-**RAM:** Unraid recommends ECC because it's the only thing preventing bit rot, as it cannot make use of `btrfs**' RAID-like capabilities to correct bit rot, but only detect it when it occurs.
+**RAM:** Unraid recommends ECC because it's the only thing preventing bit rot, as it cannot make use of `btrfs` RAID-like capabilities to correct bit rot, but only detect it when it occurs.
 Unfortunately, RAM was quite expensive at the time, and because I wasn't going to actually use Unraid for its file storage, I went with this.
 
 **GPU 1 and 2:** At the time, these were the fastest GPUs on the market for under €250 (the GPU mining wars had just begun).
@@ -63,7 +63,7 @@ I purchased them via Amazon Warehouse Deals, although I did have to return two o
 **GPU 3 and 4:** A few months later, I got two of these for a very fair price, so in they went.
 I later did return one of them after it turned out that four GPUs in this case wasn't going to work.
 
-**Storage:** I had one Crucial SSD lying around that I used as the main parity disk and got four Samsung 850 EVOs for the VMs.
+**Storage:** I had one OCZ Saber SSD lying around that I used as the main parity disk and got four Samsung 850 EVOs for the VMs.
 
 **Fans:** There was already a fan at the front of the case, but I needed very slim fans to go over the GPUs,
 so I got these Scythe Slip Stream S1 fans that are very slim indeed.
